src/objects/QPMS__Equipment_And_Material__c.object
<CustomObject>
    <description>This is a junction object which store details of added equipments,materials  and products for inspection standard.</description>
    <fields>
        <fullName>QPMS__Code__c</fullName>
        <description>This is used for storing code of equipment ,materials and products.</description>
        <label>Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__InspectionTypeName__c</fullName>
        <formula>QPMS__Inspection_Type_Name__r.QPMS__IT_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__InspectionType_Name__c</fullName>
        <formula>QPMS__Inspection_Type_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard_Name__c</fullName>
        <formula>QPMS__Inspection_Standard__r.QPMS__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Standard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with inspection standard object .</description>
        <label>Inspection Standard</label>
        <referenceTo>QPMS__Inspection_Standard__c</referenceTo>
        <relationshipLabel>Inspection Standard Junctions</relationshipLabel>
        <relationshipName>Equipment_And_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Type Name for Applicable products</description>
        <label>Inspection Type Name</label>
        <referenceTo>QPMS__Inspection_Type__c</referenceTo>
        <relationshipLabel>Inspection Standard Junctions</relationshipLabel>
        <relationshipName>Inspection_Standard_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type__c</fullName>
        <description>This is a pick list field to select inspection type while adding product for inspection standard.</description>
        <label>Inspection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>First Article(FAI)</fullName>
                </value>
                <value>
                    <fullName>Pre-production(PPI)</fullName>
                </value>
                <value>
                    <fullName>During Production(DPI)</fullName>
                </value>
                <value>
                    <fullName>Pre-Shipment(PSI)</fullName>
                </value>
                <value>
                    <fullName>Random</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Container Loading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Material_Name__c</fullName>
        <description>This is a formula field used to display the added material,equipment and product name for inspection standard.</description>
        <formula>QPMS__Product_Family__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with product family object and used to select material ,equipment,product details for adding in inspection standard</description>
        <label>Name</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Inspection Standard Junctions</relationshipLabel>
        <relationshipName>Equipment_And_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This is  a pick list used to select the type ( either equipment ,material  or product while adding for inspection standard)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inspection Standard Junction</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EQ-MA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Standard Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>